# pairs_to_parquet

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  readthedocs.yaml  setup.py
docs/: conf.py  index.rst  quickstart.md
docs/tutorials/: csv_to_parquet.ipynb  pairs_to_parquet.ipynb  parquet_to_pairs.ipynb  sort.ipynb  sort_tutorial.ipynb  tutorial_sort.ipynb
pairs_to_parquet/: __init__.py
pairs_to_parquet/cli/: __init__.py  csv_to_parquet.py  parquet_to_csv.py  select.py  sort.py
pairs_to_parquet/lib/: csv_parquet_converter.py  duckdb_select.py  duckdb_utils.py  header_metadata.py  json_transform.py
pairt_to_parquet/cli/: __init__.py  sort_duckdb.py
tests/: test_select.py  test_sort.py
tests/data/: mock.parquet
tests/data/select_results/: select_chromSubset_mock.parquet  select_csvMatch_mock.parquet  select_pairTypeEqual_mock.parquet  select_preserve_mock.parquet  select_regex_mock.parquet  select_regionMatch_mock.parquet  select_region_match_no_end_mock.parquet  select_reove_columns_mock.parquet  select_wildcard_mock.parquet
tests/data/sort_results/: sorted_mock.pairs
tests/unit_tests/: test_duckdb_utils.py  test_header_metadata.py  test_json_transform.py
