[project]
name = "pairs_to_parquet"
version = "0.1.0"

dependencies = [
    'click>=6.6',
    'pairtools>=1.1.2', 
    'pyarrow>=17.0.0',
    'duckdb>=1.4.1',
    'fire>=0.7.0'
]
requires-python = ">=3.9"

description = "Convert and process 3D contact (.pairs) files to Parquet (DuckDB version)"
authors = [
  {name = "Open2C", email = "open.chromosome.collective@gmail.com"},
]
license = {text = "MIT License"}
keywords = ["genomics", "bioinformatics", "Hi-C", "contact", "chromosome", "parquet", "column based", "DuckDB"]
readme = "README.md"

classifiers = [
  "Development Status :: 3 - Alpha",
  
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Operating System :: OS Independent",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = [
  'pytest',
  'pytest-flake8',
  'pytest-cov',
]

doc = [
  'sphinx-click',
  'ipython',
  'nbsphinx',
  'Sphinx>=7.0',
  'sphinx_rtd_theme',
  'docutils>0.16',
]



[project.urls]
Homepage = "https://github.com/ayaksvals/pairs_to_parquet"
Documentation = "https://pairtools.readthedocs.io/en/latest/"
Repository = "https://github.com/ayaksvals/pairs_to_parquet.git"
Issues = "https://github.com/ayaksvals/pairs_to_parquet/issues"
Changelog = "https://github.com/ayaksvals/pairs_to_parquet/issues/blob/master/CHANGES.md"


[project.scripts]
pairs_to_parquet = "pairs_to_parquet.cli:cli"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
